samples/_failures_safe/1761548679_3ce0ef_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0cc9363c.c: In function ‘main’:
./samples/SAFE/__tmp_0cc9363c.c:148:16: error: missing terminating " character
  148 |         printf("\nMatrix multiplication failed: dimension mismatch or
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_0cc9363c.c:148:9: error: expected expression at end of input
  148 |         printf("\nMatrix multiplication failed: dimension mismatch or
      |         ^~~~~~
./samples/SAFE/__tmp_0cc9363c.c:148:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0cc9363c.c:148:9: error: expected declaration or statement at end of input
